fix: hide table scrollbar + fixed table head borders
jira: ISPGROOT-168

--- a/projects/groot/src/style/_groot-variables.scss
+++ b/projects/groot/src/style/_groot-variables.scss
@@ -147,6 +147,8 @@ $table-selected-bg: $lightest-primary !default;
 $table-header-active-color: $white !default;
 $table-filters-applied-color: $yellow !default;
 $table-header-inactive-color: rgba($white, 0.5) !default;
+$table-cell-padding-y: 0.77rem;
+$table-cell-padding-x: 0.75rem;
 
 // Buttons
 
